cshim/wlbar.h

/* Connect to the compositor and create one layer-shell surface per
 * connected wl_output, anchored to POSITION (WLBAR_POSITION_TOP or
 * _BOTTOM) with HEIGHT pixels of exclusive zone.  The four margin
 * arguments are in pixels (top, right, bottom, left) and gap the bar
 * away from its anchor edges (use 0 for a flush bar).  Returns the
 * number of surfaces created (>= 1) on success or -1 on failure. */
int   wlbar_init(int height, int position,
                 int margin_top, int margin_right,
                 int margin_bottom, int margin_left);
/* Release every Wayland object and disconnect.  Safe to call
 * repeatedly. */
void  wlbar_shutdown(void);
/* Per-output API -------------------------------------------------- */

/* How many surfaces are currently mapped.  Stable between init and
 * shutdown except when the compositor adds/removes outputs at run
 * time (in which case wlbar_poll() refreshes the count). */
int   wlbar_output_count(void);
int       wlbar_output_width   (int i);
int       wlbar_output_height  (int i);
uint32_t *wlbar_output_pixels  (int i);
int       wlbar_output_stride  (int i);
void      wlbar_output_commit  (int i);
/* Returns the wl_output name string (e.g. "DP-1"), or NULL if the
 * compositor never told us. */
const char *wlbar_output_name  (int i);
/* Event loop ------------------------------------------------------ */

/* Dispatch any pending Wayland events.  Blocks up to TIMEOUT_MS
 * milliseconds (-1 = forever).  Returns 1 if events were processed,
 * 0 on timeout, -1 on display error. */
int   wlbar_poll  (int timeout_ms);
/* Returns 1 once every layer surface has been closed. */
int   wlbar_closed(void);